# agentradio

./: .copilotignore  .gitignore  .gitmodules  AGENTS_BEST_PRACTICES.md  audit_approval_57.md  cosk-analysis.md
.copilot/: mcp-config.json
.cosk/: registry.yaml
.github/: copilot-instructions.md
.github/agents/: analyst.md  architect.md  auditor.md  developer.md  qa-lead.md
.github/context/: env_args.json  project_config.json
.github/skills/agentic-qa/: SKILL.md
.github/skills/flask_blogs-safe-po-manager/: SKILL.md
.github/skills/flask_blogs-seo-optimizer/: SKILL.md
.github/skills/flask_blogs-translation-manager/: SKILL.md
.tmp/: audit_crawl_planhead.dev.json  audit_crawl_planhead_dev.json  audit_score_planhead_dev.json  citability_planhead_dev.json  enrichment_planhead.dev.json
cosk/: .gitignore  README.md  __init__.py  index_manager.py  index_service.py  pyproject.toml  repo_registry.py  token_estimation.py
cosk/.cosk/: registry.yaml
cosk/cli/: main.py  output.py  setup_wizard.py
cosk/docs/: client_setup.md
cosk/extraction/: __init__.py  parser.py  query_loader.py
cosk/graph/: __init__.py
cosk/indexing/: __init__.py  embedding.py  vector_store.py
cosk/mcp/: server.py
cosk/safety/: __init__.py
cosk/tests/: conftest.py  test_cli_integration.py  test_cli_main.py  test_deps.py  test_embedding.py  test_index_service.py  test_installability.py  test_mcp_server.py  test_mcp_server_integration.py  test_readme_docs.py  test_repo_registry.py  test_scaffold.py  test_token_estimation.py  test_vector_store.py
(+61 files in other folders)
