[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosk"
version = "0.1.0"
description = "Cosk v2 codebase-skeleton orchestration scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "tree-sitter>=0.23,<0.25",
  "lancedb>=0.8,<0.10; python_version < '3.14'",
  "lancedb>=0.25,<0.31; python_version >= '3.14'",
  "networkx>=3.2,<4.0",
  "sentence-transformers>=3.0,<4.0",
  "mcp>=1.0,<2.0",
]

[tool.setuptools]
packages = [
  "cosk",
  "cosk.extraction",
  "cosk.indexing",
  "cosk.graph",
  "cosk.mcp",
  "cosk.safety",
]
include-package-data = false

[tool.setuptools.package-dir]
cosk = "."
"cosk.extraction" = "extraction"
"cosk.indexing" = "indexing"
"cosk.graph" = "graph"
"cosk.mcp" = "mcp"
"cosk.safety" = "safety"

[tool.pytest.ini_options]
markers = [
  "integration: marks tests that install dependencies or run cross-process checks.",
]
